angular router milestone5

--- a/angular-router/src/app/crisis-center/crisis-list/crisis-list.component.html
+++ b/angular-router/src/app/crisis-center/crisis-list/crisis-list.component.html
@@ -2,11 +2,11 @@
 <ul class="crises">
   <li *ngFor="let crisis of crises$ | async"
     [class.selected]="crisis.id === selectedId">
-    <a [routerLink]="['/crisis', crisis.id]">
+    <a [routerLink]="['/crisis-center', crisis.id]">
       <span class="badge">{{ crisis.id }}</span>{{ crisis.name }}
     </a>
   </li>
 </ul>
 
-<button routerLink="/sidekicks">Go to sidekicks</button>
+<router-outlet></router-outlet>
 
