--- a/angular-router/src/app/crisis-center/crisis-detail/crisis-detail.component.html
+++ b/angular-router/src/app/crisis-center/crisis-detail/crisis-detail.component.html
@@ -1,10 +1,13 @@
 <div *ngIf="crisis">
-    <h2>{{crisis.name | uppercase}} Details</h2>
-    <div><span>id: </span>{{crisis.id}}</div>
-    <div>
-      <label>name:
-        <input [(ngModel)]="crisis.name" placeholder="name"/>
-      </label>
-    </div>
-    <button (click)="gotoCrises()">Back to list</button>
+  <h3>"{{ editName }}"</h3>
+  <div>
+    <label>Id: </label>{{ crisis.id }}</div>
+  <div>
+    <label>Name: </label>
+    <input [(ngModel)]="editName" placeholder="name"/>
+  </div>
+  <p>
+    <button (click)="save()">Save</button>
+    <button (click)="cancel()">Cancel</button>
+  </p>
 </div>
